# rust-sunrise

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: anomaly.rs  center.rs  coordinates.rs  declination.rs  elevation.rs  event.rs  hourangle.rs  julian.rs  lib.rs  longitude.rs  math.rs  noon.rs  perihelion.rs  sunrise.rs  transit.rs
src/julian/: chrono.rs  jiff.rs
src/solar_equation/: anomaly.rs  center.rs  declination.rs  hourangle.rs  longitude.rs  mod.rs  perihelion.rs  transit.rs
tests/: chrono_integration_test.rs  integration_test.rs  is_day.rs  jiff_integration_test.rs  polar_boundary.rs
