[package]
name = "sunrise"
version = "2.0.0"
authors = ["Nathan Osman <nathan@quickmediasolutions.com>"]
description = "Sunrise and sunset calculator"
repository = "https://github.com/nathan-osman/rust-sunrise"
readme = "README.md"
categories = ["date-and-time", "no-std"]
license = "MIT"
edition = "2024"

[lib]
name = "sunrise"

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [] }

# feature: libm
libm = { version = "0.2", optional = true }

[dev-dependencies]
approx = "0.5"
